[gd_scene load_steps=5 format=3 uid="uid://drg8pj2xm7vkg"]

[ext_resource type="PackedScene" uid="uid://bg3x5qrr57mk1" path="res://scenes/ui/hud/components/core/HealthBarComponent.tscn" id="1_health_component"]
[ext_resource type="PackedScene" uid="uid://c6m2bj7nxgxtn" path="res://scenes/ui/hud/components/core/RadarComponent.tscn" id="2_radar_component"]
[ext_resource type="PackedScene" uid="uid://bep1l6d5gtsxt" path="res://scenes/ui/hud/components/debug/PerformanceComponent.tscn" id="3_performance_component"]
[ext_resource type="Script" path="res://scenes/ui/NewHUD.gd" id="4_new_hud_script"]

[node name="NewHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_new_hud_script")

[node name="PlayerHealthBar" parent="." instance=ExtResource("1_health_component")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -40.0
offset_right = 150.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
component_id = "player_health"

[node name="EnemyRadar" parent="." instance=ExtResource("2_radar_component")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -170.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 170.0
grow_horizontal = 0
component_id = "enemy_radar"

[node name="PerformanceDisplay" parent="." instance=ExtResource("3_performance_component")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -80.0
offset_right = 160.0
offset_bottom = -10.0
grow_vertical = 0
component_id = "performance_display"

[node name="LevelLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -65.0
offset_right = 50.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 0
text = "Level: 1"
horizontal_alignment = 1

[node name="XPBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -15.0
grow_vertical = 0
max_value = 100.0
show_percentage = false